@@ -583,7 +583,7 @@ name|add
 argument_list|(
 name|Util
 operator|.
-name|toUTF32
+name|toUTF16
 argument_list|(
 name|ent
 operator|.
