@@ -202,6 +202,20 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|UnicodeUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|_TestUtil
 import|;
 end_import
@@ -314,6 +328,39 @@ argument_list|(
 literal|"empty"
 argument_list|,
 literal|""
+argument_list|)
+expr_stmt|;
+comment|// BMP (surrogate pair):
+name|builder
+operator|.
+name|add
+argument_list|(
+name|UnicodeUtil
+operator|.
+name|newString
+argument_list|(
+operator|new
+name|int
+index|[]
+block|{
+literal|0x1D122
+block|}
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|)
+argument_list|,
+literal|"fclef"
+argument_list|)
+expr_stmt|;
+name|builder
+operator|.
+name|add
+argument_list|(
+literal|"\uff01"
+argument_list|,
+literal|"full width exclamation"
 argument_list|)
 expr_stmt|;
 name|normMap
@@ -1041,6 +1088,154 @@ index|[]
 block|{}
 argument_list|,
 literal|5
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testNonBMPChar
+specifier|public
+name|void
+name|testNonBMPChar
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|CharFilter
+name|cs
+init|=
+operator|new
+name|MappingCharFilter
+argument_list|(
+name|normMap
+argument_list|,
+operator|new
+name|StringReader
+argument_list|(
+name|UnicodeUtil
+operator|.
+name|newString
+argument_list|(
+operator|new
+name|int
+index|[]
+block|{
+literal|0x1D122
+block|}
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|TokenStream
+name|ts
+init|=
+operator|new
+name|MockTokenizer
+argument_list|(
+name|cs
+argument_list|,
+name|MockTokenizer
+operator|.
+name|WHITESPACE
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|assertTokenStreamContents
+argument_list|(
+name|ts
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"fclef"
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|2
+block|}
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testFullWidthChar
+specifier|public
+name|void
+name|testFullWidthChar
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|CharFilter
+name|cs
+init|=
+operator|new
+name|MappingCharFilter
+argument_list|(
+name|normMap
+argument_list|,
+operator|new
+name|StringReader
+argument_list|(
+literal|"\uff01"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|TokenStream
+name|ts
+init|=
+operator|new
+name|MockTokenizer
+argument_list|(
+name|cs
+argument_list|,
+name|MockTokenizer
+operator|.
+name|WHITESPACE
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|assertTokenStreamContents
+argument_list|(
+name|ts
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"full width exclamation"
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|1
+block|}
+argument_list|,
+literal|1
 argument_list|)
 expr_stmt|;
 block|}
