@@ -3638,6 +3638,85 @@ argument_list|)
 return|;
 block|}
 block|}
+comment|/** Just maps each UTF16 unit (char) to the ints in an    *  IntsRef. */
+DECL|method|toUTF16
+specifier|public
+specifier|static
+name|IntsRef
+name|toUTF16
+parameter_list|(
+name|CharSequence
+name|s
+parameter_list|,
+name|IntsRef
+name|scratch
+parameter_list|)
+block|{
+specifier|final
+name|int
+name|charLimit
+init|=
+name|s
+operator|.
+name|length
+argument_list|()
+decl_stmt|;
+name|scratch
+operator|.
+name|grow
+argument_list|(
+name|charLimit
+argument_list|)
+expr_stmt|;
+name|int
+name|idx
+init|=
+literal|0
+decl_stmt|;
+while|while
+condition|(
+name|idx
+operator|<
+name|charLimit
+condition|)
+block|{
+name|scratch
+operator|.
+name|ints
+index|[
+name|idx
+index|]
+operator|=
+operator|(
+name|int
+operator|)
+name|s
+operator|.
+name|charAt
+argument_list|(
+name|idx
+argument_list|)
+expr_stmt|;
+name|idx
+operator|++
+expr_stmt|;
+block|}
+name|scratch
+operator|.
+name|offset
+operator|=
+literal|0
+expr_stmt|;
+name|scratch
+operator|.
+name|length
+operator|=
+name|idx
+expr_stmt|;
+return|return
+name|scratch
+return|;
+block|}
 comment|/** Decodes the Unicode codepoints from the provided    *  CharSequence and places them in the provided scratch    *  IntsRef, which must not be null, returning it. */
 DECL|method|toUTF32
 specifier|public
